<resources>
    <string name="app_name">Gary Portal</string>
    <string name="welcome">"Welcome to the Gary Portal"</string>
    <string name="login">Login</string>
    <string name="createaccount">Create an account</string>
    <string name="visitWebsite">Or, visit the Gary Portal website here -></string>
    <string name="emailaddress">Email Address</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="school">School</string>
    <string name="fullname">Full Name</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="goback">Go Back</string>
    <string name="title_activity_main_swiper">mainSwiper</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tapimage">Tap to Upload Image</string>
    <string name="queue">Welcome, your account is currently in the queue, please check back later</string>
    <string name="profile_website">Visit Website</string>
    <string name="points">Points:</string>
    <string name="amigoP">AMIGO POINTS:</string>
    <string name="posP">POSTIVITY POINTS:</string>
    <string name="stats">User Statisitcs:</string>
    <string name="aRank">Amigo Rank:</string>
    <string name="pRank">Postivity Rank:</string>
    <string name="team">Team:</string>
    <string name="misc">Misc:</string>
    <string name="prayerRoom">PRAYER ROOM</string>
    <string name="RR">RULES AND REGULATIONS</string>
    <string name="FEEDBACK">FEEDBACK</string>
    <string name="cd">COMPUTER DATING</string>
    <string name="settings">SETTINGS</string>
    <string name="prayerroomtitle">Prayer Room</string>
    <string name="currentprayers">Current Prayers:</string>
    <string name="simplePrayer">Simple Prayer</string>
    <string name="meaningfulPrayer">Meaningful Prayer</string>
    <string name="prayernotice">Remember, you can pray a maximum of 7 times a week, that\'s 6 simple prayers and one meaningful prayer.</string>
    <string name="prayeradmin">ADMIN: Clear prayers for all users</string>
    <string name="settingsTitle">Settings</string>
    <string name="compactGGSetting">Compact GaryGram:</string>
    <string name="largeChatSetting">Compact Chat View:</string>
    <string name="swiperGG">GaryGram</string>
    <string name="swiperPolls">Polls</string>
    <string name="swiperAdit">ADIT LOGS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
