<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.almurray.android.almurrayportal.firstPages.signupPage"
    android:background="@drawable/colback">

    <TextView
        android:id="@+id/firstPageWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:fontFamily="@font/monteserratsemibold"
        android:textSize="14pt"
        android:textAlignment="center"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_create_bg"
        android:layout_marginTop="100dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_margin="20dp"
                    android:id="@+id/createEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/emailaddress"
                    android:textAlignment="center"
                    />

                <EditText
                    android:layout_margin="20dp"
                    android:layout_below="@id/createEmail"
                    android:id="@+id/createPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_margin="20dp"
                    android:layout_below="@id/createPassword"
                    android:id="@+id/createConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/confpassword"
                    android:textAlignment="center"
                    />

                <EditText
                    android:layout_margin="20dp"
                    android:layout_below="@id/createConfirm"
                    android:id="@+id/createSchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/school"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_margin="20dp"
                    android:layout_below="@id/createSchool"
                    android:id="@+id/createFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/fullname"
                    android:textAlignment="center"
                    />

                <Button
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:id="@+id/createImageB"
                    android:layout_below="@id/createFullName"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tapimage"
                    android:background="@color/white"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_below="@id/createFullName"
                    android:id="@+id/createImage"
                    android:layout_centerHorizontal="true"
                    app:civ_border_color="@color/lightblue"
                    app:civ_border_width="2dp"
                    />

                <Button
                    android:layout_margin="20dp"
                    android:id="@+id/createCreate"
                    android:layout_below="@id/createImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monteserratsemibold"
                    android:text="@string/signup"
                    android:background="@drawable/roundedbutton_blue"
                    android:textColor="@color/white"
                    />
                <Button
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/createGoBack"
                    android:layout_below="@id/createCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratlight"
                    android:text="@string/goback"
                    android:background="@drawable/roundedbutton_blue"
                    android:textColor="@color/white"/>


            </RelativeLayout>



        </ScrollView>


    </RelativeLayout>


</RelativeLayout>
