<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.almurray.android.almurrayportal.main.garygram.GaryGram"
    android:background="@android:color/transparent">


    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_corner_radius="10dp"
        segmentedgroup:sc_checked_text_color="@color/colorAccent">

        <RadioButton
            android:id="@+id/feedSeg1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/swiperGG"
            style="@style/RadioButton"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/feedSeg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/swiperPolls"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/feedSeg3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/swiperAdit"
            style="@style/RadioButton" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <android.support.v7.app.AlertController.RecycleListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/segmented2">


    </android.support.v7.app.AlertController.RecycleListView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp" />
</RelativeLayout>
